lib/libesp32_epdiy/examples/mpd_status/components/libmpdclient/include/mpd/queue.h

struct mpd_connection;
/**
 * Change the priority of the specified song.
 *
 * @param connection the connection to MPD
 * @param priority a number between 0 and 255
 * @param id the id of the song
 * @return true on success, false on error
 *
 * @since libmpdclient 2.6
 */
bool
mpd_send_prio_id(struct mpd_connection *connection, int priority,
		 unsigned id);
/**
 * Shortcut for mpd_send_prio_id() and mpd_response_finish().
 *
 * @param connection the connection to MPD
 * @param priority a number between 0 and 255
 * @param id the id of the song
 * @return true on success, false on error
 *
 * @since libmpdclient 2.6
 */
bool
mpd_run_prio_id(struct mpd_connection *connection, int priority,
		unsigned id);