lib/libesp32_epdiy/examples/mpd_status/components/libmpdclient/vapi/libmpdclient.vapi

		[CCode (cname = "mpd_send_prio_id")]
		public bool send_prio_id(int priority, uint id);
		[CCode (cname = "mpd_run_prio_id")]
		public bool run_prio_id(int priority, uint id);
		[CCode (cname = "mpd_send_current_song")]
		public bool send_current_song();
		[CCode (cname = "mpd_run_current_song")]
		public Song run_current_song();
		[CCode (cname = "mpd_send_play")]
		public bool send_play();
		[CCode (cname = "mpd_run_play")]
		public bool run_play();
		[CCode (cname = "mpd_send_play_pos")]
		public bool send_play_pos(uint song_pos);
		[CCode (cname = "mpd_run_play_pos")]
		public bool run_play_pos(uint song_pos);
		[CCode (cname = "mpd_send_play_id")]
		public bool send_play_id(uint id);
		[CCode (cname = "mpd_run_play_id")]
		public bool run_play_id(uint song_id);
		[CCode (cname = "mpd_send_stop")]
		public bool send_stop();
		[CCode (cname = "mpd_run_stop")]
		public bool run_stop();
		[CCode (cname = "mpd_send_toggle_pause")]
		public bool send_toggle_pause();
		[CCode (cname = "mpd_run_toggle_pause")]
		public bool run_toggle_pause();
		[CCode (cname = "mpd_send_pause")]
		public bool send_pause(bool mode);
		[CCode (cname = "mpd_run_pause")]
		public bool run_pause(bool mode);
		[CCode (cname = "mpd_send_next")]
		public bool send_next();
		[CCode (cname = "mpd_run_next")]
		public bool run_next();
		[CCode (cname = "mpd_send_previous")]
		public bool send_previous();
		[CCode (cname = "mpd_run_previous")]
		public bool run_previous();
		[CCode (cname = "mpd_send_seek_pos")]
		public bool send_seek_pos(uint song_pos, uint t);
		[CCode (cname = "mpd_run_seek_pos")]
		public bool run_seek_pos(uint song_pos, uint t);
		[CCode (cname = "mpd_send_seek_id")]
		public bool send_seek_id(uint id, uint t);
		[CCode (cname = "mpd_run_seek_id")]
		public bool run_seek_id(uint song_id, uint t);
		[CCode (cname = "mpd_send_repeat")]
		public bool send_repeat(bool mode);
		[CCode (cname = "mpd_run_repeat")]
		public bool run_repeat(bool mode);
		[CCode (cname = "mpd_send_random")]
		public bool send_random(bool mode);
		[CCode (cname = "mpd_run_random")]
		public bool run_random(bool mode);
		[CCode (cname = "mpd_send_single")]
		public bool send_single(bool mode);
		[CCode (cname = "mpd_run_single")]
		public bool run_single(bool mode);
		[CCode (cname = "mpd_send_consume")]
		public bool send_consume(bool mode);
		[CCode (cname = "mpd_run_consume")]
		public bool run_consume(bool mode);
		[CCode (cname = "mpd_send_crossfade")]
		public bool send_crossfade(uint seconds);
		[CCode (cname = "mpd_run_crossfade")]
		public bool run_crossfade(uint seconds);
		[CCode (cname = "mpd_send_mixrampdb")]
		public bool send_mixrampdb(float db);
		[CCode (cname = "mpd_run_mixrampdb")]
		public bool run_mixrampdb(float db);
		[CCode (cname = "mpd_send_mixrampdelay")]
		public bool send_mixrampdelay(float seconds);
		[CCode (cname = "mpd_run_mixrampdelay")]
		public bool run_mixrampdelay(float seconds);
		[CCode (cname = "mpd_send_clearerror")]
		public bool send_clearerror();
		[CCode (cname = "mpd_run_clearerror")]
		public bool run_clearerror();
		[CCode (cname = "mpd_send_list_playlists")]
		public bool send_list_playlists();
		[CCode (cname = "mpd_send_subscribe")]
		public bool send_subscribe(string channel);
		[CCode (cname = "mpd_run_subscribe")]
		public bool run_subscribe(string channel);
		[CCode (cname = "mpd_send_unsubscribe")]
		public bool send_unsubscribe(string channel);
		[CCode (cname = "mpd_run_unsubscribe")]
		public bool run_unsubscribe(string channel);
		[CCode (cname = "mpd_send_send_message")]
		public bool send_send_message(string channel, string text);
		[CCode (cname = "mpd_run_send_message")]
		public bool run_send_message(string channel, string text);
		[CCode (cname = "mpd_send_read_messages")]
		public bool send_read_messages();
		[CCode (cname = "mpd_recv_message")]
		public Message recv_message();
		[CCode (cname = "mpd_send_channels")]
		public bool send_channels();
		[CCode (cname = "mpd_recv_channel_pair")]
		public Pair recv_channel_pair();
	}

	[CCode (cname = "struct mpd_directory",
		copy_function = "mpd_directory_dup",
		free_function = "mpd_directory_free")]
	[Compact]
	public class Directory {
		public string path { get; }

		public unowned string get_path();
		public bool feed(Mpd.Pair pair);
		public Entity? entity_begin();
	}

	[CCode (cname = "struct mpd_entity",
		free_function = "mpd_entity_free")]
	[Compact]
	public class Entity {
		public EntityType type { get; }
		public Directory directory { get; }
		public Song song { get; }
		public Playlist playlist { get; }

		public EntityType get_type();
		public Directory get_directory();
		public Song get_song();
		public Playlist get_playlist();
		public bool feed(Pair pair);
	}

	[CCode (cname = "struct mpd_output",
		free_function = "mpd_output_free")]
	[Compact]
	public class Output {
		public uint id { get; }
		public string name { get; }
		public bool enabled { get; }

		public bool feed(Pair pair);
		public uint get_id();
		public unowned string get_name();
		public bool get_enabled();
	}

	[CCode (cname = "struct mpd_pair",
		free_function = "")]
	[Compact]
	public class Pair {
		public unowned string name;
		public unowned string value;
		[CCode (cname = "mpd_directory_begin")]
		public Directory? directory_begin();
		[CCode (cname = "mpd_output_begin")]
		public Output output_begin();
		[CCode (cname = "mpd_playlist_begin")]
		public Playlist playlist_begin();
		[CCode (cname = "mpd_song_begin")]
		public Song song_begin();
		[CCode (cname = "mpd_idle_parse_pair")]
		public Idle idle_parse_pair();
	}

	[CCode (cname = "struct mpd_parser",
		free_function = "mpd_parser_free")]
	[Compact]
	public class Parser {
		public ServerError server_error { get; }
		public uint at { get; }
		public string message { get; }
		public string name { get; }
		public string value { get; }

		public ParserResult feed(string line);
		public bool is_discrete();
		public ServerError get_server_error();
		public uint get_at();
		public unowned string get_message();
		public unowned string get_name();
		public unowned string get_value();
	}

	[CCode (cname = "struct mpd_playlist",
		copy_function = "mpd_playlist_dup",
		free_function = "mpd_playlist_free")]
	[Compact]
	public class Playlist {
		public string path { get; }
		public int64 last_modified { get; }

		public string get_path();
		public int64 get_last_modified();
		public bool feed(Pair pair);
	}

	[CCode (cname = "struct mpd_song",
		copy_function = "mpd_song_dup",
		free_function = "mpd_song_free")]
	[Compact]
	public class Song {
		public string uri { get; }
		public uint duration { get; }
		public int64 last_modified { get; }
		public uint pos { get; set; }
		public uint id { get; }

		public unowned string get_uri();
		public unowned string get_tag(TagType type, uint idx = 0);
		public uint get_duration();
		public int64 get_last_modified();
		public void set_pos(uint pos);
		public uint get_pos();
		public uint get_id();
		public bool feed(Pair pair);
	}

	[CCode (cname = "struct mpd_stats",
		free_function = "mpd_stats_free")]
	[Compact]
	public class Stats {
		public uint number_of_artist { get; }
		public uint number_of_albums { get; }
		public uint number_of_songs { get; }
		public ulong uptime { get; }
		public ulong db_update_time { get; }
		public ulong play_time { get; }
		public ulong db_play_time { get; }

		public void feed(Pair pair);
		public uint get_number_of_artists();
		public uint get_number_of_albums();
		public uint get_number_of_songs();
		public ulong get_uptime();
		public ulong get_db_update_time();
		public ulong get_play_time();
		public ulong get_db_play_time();
	}

	[CCode (cname = "struct mpd_status",
		free_function = "mpd_status_free")]
	[Compact]
	public class Status {
		public int volume { get; }
		public bool repeat { get; }
		public bool random { get; }
		public bool single { get; }
		public bool consume { get; }
		public uint queue_length { get; }
		public uint queue_version { get; }
		public State state { get; }
		public uint crossfade { get; }
		public float mixrampdb { get; }
		public float mixrampdelay { get; }
		public int song_pos { get; }
		public int song_id { get; }
		public uint elapsed_time { get; }
		public uint elapsed_ms { get; }
		public uint total_time { get; }
		public uint kbit_rate { get; }
		public AudioFormat audio_format { get; }
		public uint update_id { get; }
		public string error { get; }

		public int get_volume();
		public bool get_repeat();
		public bool get_random();
		public bool get_single();
		public bool get_consume();
		public uint get_queue_length();
		public uint get_queue_version();
		public State get_state();
		public uint get_crossfade();
		public float get_mixrampdb();
		public float get_mixrampdelay();
		public int get_song_pos();
		public int get_song_id();
		public int get_next_song_pos();
		public int get_next_song_id();
		public uint get_elapsed_time();
		public uint get_elapsed_ms();
		public uint get_total_time();
		public uint get_kbit_rate();
		public AudioFormat get_audio_format();
		public uint get_update_id();
		public unowned string get_error();
	}

	[CCode (cname = "struct mpd_settings",
		free_function = "mpd_settings_free")]
	[Compact]
	public class Settings {
		public string? host { get; }
		public uint port { get; }
		public uint timeout_ms { get; }
		public string? password { get; }

		public Settings(string? host = null, uint port = 0, uint timeout_ms = 0, string? reserved = null, string? password = null);
		public string? get_host();
		public uint get_port();
		public uint get_timeout_ms();
		public string? get_password();
	}

	[CCode (cname = "struct mpd_message",
		free_function = "mpd_message_free")]
	[Compact]
	public class Message {
		public string channel { get; }
		public string text { get; }

		public bool feed(Pair pair);
		public unowned string get_channel();
		public unowned string get_text();
	}

	public Status status_begin();
	public unowned string tag_name(TagType type);
	public TagType tag_name_parse(string name);
	public TagType tag_name_iparse(string name);
	public unowned string? idle_name(Idle idle);
	public Idle idle_name_parse(string name);
	public Stats stats_begin();
	public unowned string parse_sticker(string input, out int64 name_length_r);

	public const string LIBMPDCLIENT_MAJOR_VERSION;
	public const string LIBMPDCLIENT_MINOR_VERSION;
	public const string LIBMPDCLIENT_PATCH_VERSION;
}
